--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -11,10 +11,10 @@
     - name: "10:00am - 5:00pm TBD"
     - name: "5:00 Meet-and-greet (based on this [model](https://medium.com/swlh/how-to-run-a-zoom-cocktail-party-and-have-better-classes-conferences-and-meetings-too-dc2c5b58f8be)) (*Zoom*)"
     
-- date: 
-  name: Day 1: Introduction and Ethics (Monday, June 14th, 2021)
+- date: 2021-06-14
+  name: Day 1: Introduction and Ethics
   events:
-    - name: "[Day 1: Pre-arrival videos and corresponding slides](https://sicss.io/curriculum)"
+    - name: "[Day 1: Pre-arrival videos & corresponding slides](https://sicss.io/curriculum)"
     - name: "10:00 - 10:30 Introduction and logistics (*Zoom*)"
     - name: "10:30 - 11:30 Small group discussions [Lesson plan (participants)] (link coming soon)) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
@@ -26,8 +26,9 @@
     - name: "3:15 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2021-06-15
-  name: Collecting Digital Trace Data
+  name: Day 2: Collecting Digital Trace Data 
   events:
+    - name: "[Day 2: Pre-arrival videos, corresponding slides, & annotated code](https://sicss.io/curriculum)"
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Designing a Research Question with Digital Trace Data (*Zoom*)"
     - name: "11:30 - 12:00 Break"
@@ -39,8 +40,9 @@
   
 
 - date: 2021-06-16
-  name: Automated Text Analysis
+  name: Day 3: Automated Text Analysis
   events:
+    - name: "[Day 3: Pre-arrival videos, corresponding slides, & annotated code](https://sicss.io/curriculum)"
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Group Exercise (*Zoom*)"
     - name: "11:30 - 12:00 Break"
@@ -50,8 +52,9 @@
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2021-06-17
-  name: Surveys in the Digital Age
+  name: Day 4: Surveys in the Digital Age
   events:
+    - name: "[Day 4: Pre-arrival videos & corresponding slides](https://sicss.io/curriculum)"
     - name: "10:00 - 10:15 Logistics (*Zoom*)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Lesson plan (participants)] (link coming soon) (*Zoom*)"
     - name: "10:30 - 11:30 Morning group exercise (*Zoom*)"
@@ -64,8 +67,9 @@
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
 
 - date: 2021-06-18
-  name: Mass collaboration and machine learning
+  name: Day 5: Mass collaboration and machine learning
   events:
+    - name: "[Day 5: Pre-arrival videos & corresponding slides](https://sicss.io/curriculum)"
     - name: "10:00 - 10:15 Logistics (*Zoom*)"
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*)"
     - name: "10:30 - 11:30 Participate in the Fragile Families Challenge [Lesson plan (participants)] (link coming soon) (*Zoom*)"
@@ -84,7 +88,7 @@
   name: Day off
 
 - date: 2021-06-21
-  name: Work on group projects and participate in SICSS Festival
+  name: Day 6: Work on group projects and participate in SICSS Festival
   events:
   - name: "10:00 - 12:00 TBD"
   - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*)"
@@ -92,7 +96,7 @@
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours"
 
 - date: 2021-06-22
-  name: Work on group projects and participate in SICSS Festival
+  name: Day 7: Work on group projects and participate in SICSS Festival
   events:
   - name: "10:00 - 12:00 TBD"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*)"
@@ -100,7 +104,7 @@
   - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours"
 
 - date: 2021-06-23
-  name: Work on group projects and participate in SICSS Festival
+  name: Day 8: Work on group projects and participate in SICSS Festival
   events:
   - name: "10:00 - 12:00 TBD"
   - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom)"
@@ -108,7 +112,7 @@
   - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour"
 
 - date: 2021-06-24
-  name: Work on group projects and participate in SICSS Festival
+  name: Day 9: Work on group projects and participate in SICSS Festival
   events:
   - name: "10:00 - 4:00 TBD"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom)" 
@@ -116,7 +120,7 @@
   - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour"
 
 - date: 2021-06-25
-  name: Present group projects and participate in SICSS Festival
+  name: Day 10: Present group projects and participate in SICSS Festival
   events:
   - name: "10:00 - 12:00 TBD"
   - name: "12:00 - 1:00 Live lunchtime address and Q&A, Paul Decker, President and Chief Executive Officer, Mathematica"
