--- a/_data/2021/montreal/schedule.yml
+++ b/_data/2021/montreal/schedule.yml
@@ -1,12 +1,27 @@
 # name: Ce calendrier est sujet à changement
 # name: Semaine 1 Formation intensive à R
+
+- date: "Aperçu du programme"
+  events:
+    - name: "SICSS-Montréal se déroule virtuellement à l'aide d'une combinaison de conférences vidéo asynchrones, d'exercices de groupe et de séances de rétroaction de groupe synchrones. Chaque jour suit à peu près lea même horaire, comme indiqué dans cette section."
+    - name: "**Matin**<br/>Environ 2h de cours vidéo à visionner individuellement suivi du Labo (en groupe) pour préparer les séances de l'après-midi et du soir."
+    - name: "**Après-midi**<br/>Exercice de groupe à effectuer en petits groupes de participants en utilisant Slack et Zoom pour coordonner et travailler sur l'exercice."
+    - name: "**Evening (15:30-17:00)**<br/>Séance synchrone d'une heure et demi avec tous les participants pour suivre les présentations des conférenciers."
+
+- date: "Première semaine : Introduction à R"
+  events:
+    - name: "**À propos du camp d'entraînement de codage, des livres et des exercices**<br/>Nous vous recommandons de suivre les cours assignés sur [DataCamp](https://www.datacamp.com), un site Web qui enseigne aux gens comment coder. Il y a également les notes de cours qui seront complétés par le livre en libre accès _[R for Data Science](https://r4ds.had.co.nz/)_ de Garrett Grolemund et Hadley Wickham. Il est important que vous parcouriez complètement les notes de cours, les cours assignés sur Datacamp et certains chapitres du livre pour comprendre tous les concepts importants. Ensuite, nous avons mis un certain nombre d'exercices pertinents à travailler. Pour ces exercices, vous pouvez utiliser les notebook et les données fournis [ici](https://github.com/visseho/Cours_SICSS_Montreal/tree/main/Semaine1_Formation_Intensive_R) (pour commencer, télécharger le référentiel complet sous forme de fichier zip)."
+    - name: "**Notebook et données d'accompagnement :** [Afficher sur GitHub](https://github.com/visseho/Cours_SICSS_Montreal/tree/main/Semaine1_Formation_Intensive_R)."
+
 - date: 2021-06-07
   name: Introduction à R, RStudio et RMarkdown
   events:
+    - name: "_Vidéos concernées sur Datacamp :_ [Introduction to R](https://learn.datacamp.com/courses/free-introduction-to-r), [Introduction to the Tidyverse](https://learn.datacamp.com/courses/introduction-to-the-tidyverse)"
     - name: "9:00 - 9:30 Arrivée"
     - name: "9:30 - 11:15 Formation (Zoom)"
     - name: "11:15 - 11:30 Pause (Zoom)"
     - name: "11:30 - 12:30 Labo (Zoom)"
+    - name: "_Données et exercices disponibles [ici](https://github.com/visseho/Cours_SICSS_Montreal/tree/main/Semaine1_Formation_Intensive_R/Jour1_Introduction)._"
     - name: "Exercices à rendre"
 - date: 2021-06-08
   name: Transformation des données
@@ -15,6 +30,7 @@
     - name: "9:30 - 11:15 Formation (Zoom)"
     - name: "11:15 - 11:30 Pause (Zoom)"
     - name: "11:30 - 12:30 Labo (Zoom)"
+    - name: "_Données et exercices disponibles [ici](https://github.com/visseho/Cours_SICSS_Montreal/tree/main/Semaine1_Formation_Intensive_R/Jour2_Manipulation)._"
     - name: "Exercices à rendre"
 - date: 2021-06-09
   name: Visualisation
@@ -23,6 +39,7 @@
     - name: "9:30 - 11:15 Formation (Zoom)"
     - name: "11:15 - 11:30 Pause (Zoom)"
     - name: "11:30 - 12:30 Labo (Zoom)"
+    - name: "_Données et exercices disponibles [ici](https://github.com/visseho/Cours_SICSS_Montreal/tree/main/Semaine1_Formation_Intensive_R/Jour3_Visualisation)._"
     - name: "Exercices à rendre"
 - date: 2021-06-10
   name: Modélisation
@@ -31,6 +48,7 @@
     - name: "9:30 - 11:15 Formation (Zoom)"
     - name: "11:15 - 11:30 Pause (Zoom)"
     - name: "11:30 - 12:30 Labo (Zoom)"
+    - name: "_Données et exercices disponibles [ici](https://github.com/visseho/Cours_SICSS_Montreal/tree/main/Semaine1_Formation_Intensive_R/Jour4_Mod%C3%A9lisation)._"
     - name: "Exercices à rendre"
 - date: 2021-06-11
   name: Programmation / Introduction aux données de texte
@@ -39,6 +57,7 @@
     - name: "9:30 - 11:15 Formation (Zoom)"
     - name: "11:15 - 11:30 Pause (Zoom)"
     - name: "11:30 - 12:30 Labo (Zoom)"
+    - name: "_Données et exercices disponibles [ici](https://github.com/visseho/Cours_SICSS_Montreal/tree/main/Semaine1_Formation_Intensive_R/Jour5_Programmation)._"
     - name: "Exercices à rendre"
 - date: 2021-06-12
   name: Congé
