--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -3,17 +3,17 @@
 - date: 2021-06-12
   name: Praxis to Power Pre-Institute
   events: 
-    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics (*Zoom*)"
+    - name: "10:00 - 11:45 Welcome, Praxis to Power Day 1 Introduction and logistics" (*Zoom*)
     - name: "11:45 - 12:00 Break"
-    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy (*Zoom*)" 
+    - name: '12:00 - 1:00 "Personal Experiences of African Americans in the Academy" (*Zoom*) 
     
-     - Terri Adams-Fuller, Ph.D., Inaugural  SICSS-H/M Faculty Co-Sponsor, Associate Professor, Department  of Sociology and Anthropology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology at Howard University
+     - Terri Adams-Fuller, Ph.D., Faculty Co-Sponsor, Associate Professor, Department  of Sociology and Anthropology, and Interim Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University
      
-     - Britany Gatewood, Ph.D., Adjunct Lecturer, Department of Sociology at Georgetown University
+     - Britany Gatewood, Ph.D., Adjunct Lecturer, Department of Sociology, Georgetown University
      
-     - Brandon Hogan, Ph.D., Associate Professor, Department of Sociology at Howard University
+     - Brandon Hogan, Ph.D., Associate Professor, Department of Sociology, Howard University
      
-     - Bahiyyah Muhammad, Ph.D. Inaugural  SICSS-H/M Faculty Co-Sponsor, Associate Professor, Department of Sociology and Anthropology at Howard University'
+     - Bahiyyah Muhammad, Ph.D., Faculty Co-Sponsor, Associate Professor, Department of Sociology and Anthropology, Howard University'
      
     - name: "1:00 - 1:15 Break" 
     - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) (slides) (handout) (video)
@@ -28,7 +28,7 @@
 - date: 2021-06-13
   name: Praxis to Power Pre-Institute
   events:
-    - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*) [(video)]"
+    - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*) (video)"
     - name: "11:00 - 2:00 Open Office Hours, or SICSS-Howard/Mathematica Exclusive Content Review (on your own), or Pre-Arrival Material Review (on your own)
     
     
@@ -43,7 +43,7 @@
               
                 - [Day 1: Introduction and Ethics, Day 2: Collecting Digital Trace Data, Day 3: Automated Text Analysis, Day 4: Surveys in the Digital Age, Day 5: Mass collaboration and machine learning, & OPTIONAL Day 6: Experiments](https://sicss.io/curriculum)
               
-                - Bit by Bit by Matt Salganik [(textbook)](https://www.bitbybitbook.com/en/1st-ed/preface/) [(video)](https://youtu.be/jl__M596Crs)
+                - Bit by Bit by Matt Salganik [(textbook)](https://www.bitbybitbook.com/en/1st-ed/preface/) / [(video)](https://youtu.be/jl__M596Crs)
                 
                 
                 
@@ -57,7 +57,7 @@
               
                 - Bahiyyah Muhammad, Ph.D., Faculty Co-Sponsor & Associate Professor, Department of Sociology and Criminology, Howard University [(video)](https://youtu.be/2WRhoRgmvvc)
               
-                - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [[video)](https://youtu.be/y-dp19EpEcU)]
+                - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [(video)](https://youtu.be/y-dp19EpEcU)]
               
                 - Akira Bell,  Event Co-Sponsor & Senior Vice President; Chief Information Officer, Mathematica [(video)](https://youtu.be/BVRDqmDMT-0)
               
@@ -71,7 +71,7 @@
               
                 - Reimagining Social Institutions: Higher Education, an SSRC and SAGE publishing panel moderated by Alondra Nelson, Ph.D. [(video)](https://youtu.be/PdsdS4wnaG4)
                 
-                - Black in AI, board member panel [video](https://youtu.be/uUyNd3yjTv8)
+                - Black in AI, board member panel [(video)](https://youtu.be/uUyNd3yjTv8)
               
                 - Discussion on Diversity in Computational Social Science, SICSS Alumni Festival 2020 [(video)](https://www.youtube.com/watch?v=FYES4RCRaZw&t=2s)
               
@@ -89,8 +89,8 @@
   name: "Day 1: Introduction and Ethics"
   events:
     - name: "[Day 1: Pre-arrival videos & corresponding slides](https://sicss.io/curriculum)"
-    - name: "10:00 - 10:30 Institute Introduction and logistics (*Zoom*) [(video)]"
-    - name: "10:30 - 11:30 Small group discussions [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md) (*Zoom*) [video]"
+    - name: "10:00 - 10:30 Institute Introduction and logistics (*Zoom*) (video)"
+    - name: "10:30 - 11:30 Small group discussions [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md) (*Zoom*) (video)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: Getting the most out of your SICSS experience - a panel discussion with SICSS alums of color (encouraged) (*Zoom*) (video) (slides)"
     - name: "1:00 - 1:30 Break"
@@ -168,36 +168,36 @@
   name: "Day 6: Work on group projects and participate in SICSS Festival"
   events:
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
-  - name: "10:15 - 12:00 TBD"
+  - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*) (video)"
-  - name: "1:00 - 4:00 TBD"
+  - name: "1:00 - 4:00 Work on group projects"
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) (video) (slides)"
 
 - date: 2021-06-22
   name: "Day 7: Work on group projects and participate in SICSS Festival"
   events:
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
-  - name: "10:15 - 12:00 TBD"
+  - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) (video) (slides)"
-  - name: "1:00 - 4:00 TBD" 
+  - name: "1:00 - 4:00 Work on group projects" 
   - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) (video) (slides)"
 
 - date: 2021-06-23
   name: "Day 8: Work on group projects and participate in SICSS Festival"
   events:
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
-  - name: "10:15 - 12:00 TBD"
+  - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video)"
-  - name: "1:00 - 4:00 TBD"
+  - name: "1:00 - 4:00 Work on group projects"
   - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) (video) (slides)"
 
 - date: 2021-06-24
   name: "Day 9: Work on group projects and participate in SICSS Festival"
   events:
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
-  - name: "10:15 - 4:00 TBD"
+  - name: "10:15 - 4:00 Work on group projects"
   - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom*) (video) (slides)" 
-  - name: "1:00 - 4:00 TBD"
+  - name: "1:00 - 4:00 Work on group projects"
   - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) (video) (slides)"
 
 - date: 2021-06-25
