--- a/_data/2021/chicago/schedule.yml
+++ b/_data/2021/chicago/schedule.yml
@@ -1,7 +1,7 @@
 - date: All times are in Central Standard Time
 
 - date: 2021-06-14
-  name: Monday: Introduction and Ethics
+  name: Introduction and Ethics
   events:
     - name: "10:00 - 11:00 Introductions & Announcements"
     - name: "11:00 - 12:00 'Why SICSSS? & Ethics, Pt. 1'"
@@ -11,7 +11,7 @@
     - name: "2:30 - 4:30 Group Work: Introduction, Work Session & Wrap-up"
 
 - date: 2021-06-15
-  name: Tuesday: Collecting Digital Trace Data
+  name: Collecting Digital Trace Data
   events:
     - name: "10:00 - 11:00 Announcements, Icebreaker, an Introduction to Digital Trace Data from Chris Bail "
     - name: "11:00 - 12:00 Collecting Digital Trace Data"
@@ -22,7 +22,7 @@
 
 
 - date: 2021-06-16
-  name: Wednesday: Text Analysis
+  name: Text Analysis
   events:
     - name: "10:00 - 12:30 Annoucnements & Guest Lecturer: Christina Maimone, Northwestern University Research and & Computing Services"
     - name: "12:30 - 1:00 Lunch & Introduction to Activity"
@@ -31,7 +31,7 @@
     - name: "3:00 - 4:30 Group Work: Work Session & Wrap-up"
 
 - date: 2021-06-17
-  name: Thursday: Surveys 
+  name: Surveys 
   events:
     - name: "10:00 - 11:30 Announcmenets and an Introduction to Surveys"
     - name: "11:30 - 12:00 Survey Launch"
@@ -41,7 +41,7 @@
     - name: "2:00 - 4:30 Group Work: Work Session & Wrap-up"
 
 - date: 2021-06-18
-  name: Friday: Mass Collaboration & Experiments
+  name: Mass Collaboration & Experiments
   events:
     - name: "10:00 - 11:00 Introduction to Mass Collaboration & Experiments"
     - name: "11:00 - 1:00 Lunch & Lightning Talks"
