--- a/_data/2022/lisbon/schedule.yml
+++ b/_data/2022/lisbon/schedule.yml
@@ -65,13 +65,12 @@
   events:
     - name: "10:00 - 11:00 Lecture part 1"
     - name: "11:00 - 11:20 Coffee break"
-    - name: "11:20 - 12:00 Lecture part 2"
-    - name: "12:00 - 1:00 Lunch at school canteen"
-    - name: "1:00 - 1:30 Lightning talk by participant (encouraged)"
-    - name: "1:35 - 3:00 Goup exercise"
-    - name: "3:00 - 3:15 Break"
-    - name: "3:15 - 4:00 Continue on group exercise"
-    - name: "4:00 - 4:15 Debrief and logistics"
+    - name: "11:20 - 12:20 Lecture part 2"
+    - name: "12:20 - 1:10 Lunch at school canteen"
+    - name: "1:10 - 1:30 Lightning talk by participant (encouraged)"
+    - name: "1:30 - 3:45 Goup exercise"
+    - name: "3:45 - 4:00 Debrief and logistics"
+    - name: "4:00 - 4:20 Coffee Break"
     - name: "4:30 - 6:00 Talk by Prof. Jinjun Xiong"
  
 - date: 2022-06-25
